:sparkles: start with accordion

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -42,7 +42,7 @@ html {
 body {
   font-family: "Kumbh Sans", sans-serif;
   //   font-size: 1rem;
-  //   background-color: $very-dark-grey;
+  background: linear-gradient(180deg, #af67e9 0%, #6565e7 100%);
   min-height: 100vh;
   overflow-x: hidden;
   display: grid;
