--- a/src/_includes/partials/faq.html
+++ b/src/_includes/partials/faq.html
@@ -1,40 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>W52 #13 - FAQ Accordion</title>
-    <link rel="stylesheet" href="/css/index.css" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
-  </head>
-  <body>
-    <!-- <a class="skip-to-content" href="#main-content">Skip to content</a> -->
-    <main class="">
-    <section id="faq" class="container" aria-label="faq">
+<section id="faq" class="container" aria-label="faq">
   <div class="image__wrapper">
     <picture>
       <source
         media="(min-width: 960px)"
-        srcset="/images/illustration-woman-online-desktop.svg"
+        srcset="/images/{{image_woman}}-desktop.svg"
       />
       <source
         media="(max-width: 960px)"
-        srcset="/images/illustration-woman-online-mobile.svg"
+        srcset="/images/{{image_woman}}-mobile.svg"
       />
       <img
         srcset="
-          /images/illustration-woman-online-desktop.svg,
-          /images/illustration-woman-online-mobile.svg
+          /images/{{image_woman}}-desktop.svg,
+          /images/{{image_woman}}-mobile.svg
         "
         sizes="(min-width: 960px), (max-width: 960px)"
-        src="/images/illustration-woman-online-mobile.svg"
-        alt="a person watching a screen"
+        src="/images/{{image_woman}}-mobile.svg"
+        alt="{{image_woman_alt}}"
       />
     </picture>
     <!-- Box Start -->
@@ -109,43 +91,14 @@
     <!-- Box End -->
   </div>
   <div class="faq__section">
-    <h2>FAQ</h2>
+    <h2>{{heading | upper}}</h2>
     <div class="accordion">
-      
+      {% for question in questions %}
       <details class="accordion__item">
-        <summary>How many team members can I invite?</summary>
-        <p>You can invite up to 2 additional users on the Free plan. There is no limit on  team members for the Premium plan.
-</p>
+        <summary>{{question.question}}</summary>
+        <p>{{question.answer}}</p>
       </details>
-      
-      <details class="accordion__item">
-        <summary>What is the maximum file upload size?</summary>
-        <p>No more than 2GB. All files in your account must fit your allotted storage space.
-</p>
-      </details>
-      
-      <details class="accordion__item">
-        <summary>How do I reset my password?</summary>
-        <p>Click “Forgot password” from the login page or “Change password” from your profile page.  A reset link will be emailed to you.
-</p>
-      </details>
-      
-      <details class="accordion__item">
-        <summary>Can I cancel my subscription?</summary>
-        <p>Yes! Send us a message and we’ll process your request no questions asked.
-</p>
-      </details>
-      
-      <details class="accordion__item">
-        <summary>Do you provide additional support?</summary>
-        <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.
-</p>
-      </details>
-      
+      {% endfor %}
     </div>
   </div>
 </section>
-
-</main>
-  </body>
-</html>
