:sparkles: styling the accordion pt2

--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -16,5 +16,6 @@
   <body>
     <!-- <a class="skip-to-content" href="#main-content">Skip to content</a> -->
     <main class="">{% block content %}{% endblock %}</main>
+    <script src="{{'/js/index.js' | url}}"></script>
   </body>
 </html>
