:sparkles: add cursor pointer on summary

--- a/src/sass/components/_summary.scss
+++ b/src/sass/components/_summary.scss
@@ -9,6 +9,9 @@ details summary::marker {
 details[open] summary {
   font-weight: 700;
 }
+summary {
+  cursor: pointer;
+}
 
 summary:after {
   content: "";
