:bug: fix hover

--- a/src/_includes/partials/faq.html
+++ b/src/_includes/partials/faq.html
@@ -119,7 +119,7 @@
     <div class="accordion">
       {% for question in questions %}
       <details {% if question.id === "2" %}open{% endif%} class="accordion__item">
-        <summary class="text-very-dark-grayish-blue body-fs-lg bg-hover-soft-red">
+        <summary class="text-very-dark-grayish-blue body-fs-lg text-hover-soft-red">
           {{question.question}}
         </summary>
         <p class="text-very-dark-grayish-blue body-fs-sm">
